Working turn based game system TwT

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="basic_attack">Basic Attack</string>
     <string name="full_slash">Full Slashk</string>
     <string name="charged_attack">Charged Attack</string>
-    <string name="stun">stun</string>
+    <string name="sstun">stun</string>
     <string name="info">info</string>
     <string name="infoText">
         <br />\n
